<resources>
    <string name="app_name">Me, Student</string>
    <string name="btnAddDisc">New Discipline</string>
    <string name="btnAddGrade">Add Grade</string>
    <string name="btnSearchDisc">View my disciplines</string>
    <string name="btnRmvDisc">Remove Discipline</string>
    <string name="btnEditDisc">Edit Discipline</string>
    <string name="btnAbout">About this App</string>
    <string name="btnReset">Reset All</string>
    <string name="nameNewDisc">Name</string>
    <string name="nameNewDiscTeacher">Teacher</string>
    <string name="classsroom">Where?</string>
    <string name="dayOfClass">When?</string>
    <string name="saveNewDisc">Save</string>
    <string name="grades">Grades</string>
    <string name="firstLogin">First login? Sign up!</string>
    <string name="signUpLogin">Enter login</string>
    <string name="signUpPassword">Enter Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="SignUp">Sign Me Up!</string>
    <string name="about">This app was developed in the year of 2019 by the graduante student Raul Pellizzer, for the discipline Dispositivos Móveis, lectured by professor Dr. Rodrigo Plotze. Me, Student has the objective of helping students that are in college to view their grades and classrooms more easily.</string>
    <string name="viewDiscAddGrade">Select a discipline</string>
    <string name="addGradeText">Add new grade</string>
    <string name="viewAllDisc">Your current disciplines</string>
    <string name="removeDisc">Remove a discipline</string>
    <string name="editDisc">Edit your discipline</string>
    <string name="resetSemester">Reset semester</string>
    <string name="resetSemester2">ATTENTION REQUIRED: By clicking the [RESET SEMESTER] button, all data will be lost.</string>
    <string name="radYes">Yes, im sure i want to proceed</string>
    <string name="radNo">No, stop this madness right now!</string>
    <string name="btnConfig">Config</string>
    <string name="ckbAuth">Request Authentication in Loggin</string>
    <string name="continueAddGrade">Continue</string>
    <string name="username">User:</string>
    <string name="signUpNewUser">New User</string>
    <string name="saveDiscChanges">Save Changes</string>
    <string name="submitGrades">Submit your grades</string>
    <string name="gradeDescription">Description  (Ex: P1, P2, Work1)</string>
    <string name="gradeNumber">Grade  (Ex: 7, 8.5)</string>
    <string name="discipline">Discipline: </string>
    <string name="disciplineInfo">Discipline Info</string>
    <string name="disciplineName">Discipline: </string>
    <string name="disciplineTeacher">Teacher: </string>
    <string name="disciplineClass">Class: </string>
    <string name="disciplineDate">Day: </string>
    <string name="disciplineGrades">Grades: </string>

</resources>
