<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".signUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/signUpLogin"/>


    <EditText
        android:id="@+id/edtTextSignUpLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="70sp"
        android:text="@string/signUpPassword"/>

    <EditText
        android:id="@+id/edtTextSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="70sp"
        android:text="@string/confirmPassword"/>

    <EditText
        android:id="@+id/edtTextConfPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:layout_gravity="center"/>


</LinearLayout>