<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".AddGrade">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingTop="10sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/app_name">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:paddingTop="30sp"
        android:textSize="30sp"
        android:text="@string/resetSemester">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30sp"
        android:textSize="20sp"
        android:layout_margin="15sp"
        android:text="@string/resetSemester2">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp">
    </TextView>

    <Button
        android:id="@+id/btnResetSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resetSemester"
        android:textStyle="bold">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp">
    </TextView>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radYes">

        </RadioButton>

        <RadioButton
            android:id="@+id/radNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radNo">

        </RadioButton>

    </RadioGroup>

</LinearLayout>