<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Me, student"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingTop="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitGrades"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingTop="40sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/discipline">
            </TextView>

            <TextView
                android:id="@+id/txtViewDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:textSize="15sp">
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradeDescription"
            android:textSize="25sp"
            android:paddingTop="70sp"
            android:paddingLeft="10sp"/>

        <EditText
            android:id="@+id/edtGradeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradeNumber"
            android:textSize="25sp"
            android:paddingTop="70sp"
            android:paddingLeft="10sp"/>

        <EditText
            android:id="@+id/edtGradeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp">
        </TextView>

        <Button
            android:id="@+id/btnSaveNewGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saveNewDisc"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>